# parser-test-assignment

./: README.md  app.py  config.py  models.py  pyproject.toml  result.csv
